RESOLVED FIXED140470
Web pages fail to load using public iOS WebKit; ASSERT(!isMainThread()) in -[WebCoreResourceHandleAsOperationQueueDelegate connection:willSendRequest:redirectResponse:]
https://bugs.webkit.org/show_bug.cgi?id=140470
Summary Web pages fail to load using public iOS WebKit; ASSERT(!isMainThread()) in -[...
Daniel Bates
Reported 2015-01-14 15:16:19 PST
Created attachment 244648 [details] Backtrace When I load apple.com in the iOS Simulator using a debug build of iOS WebKit built with the public iOS SDK the assertion ASSERT(!isMainThread()) fails in -[WebCoreResourceHandleAsOperationQueueDelegate connection:willSendRequest:redirectResponse:]. I'm using OpenSource r178229 and the public iOS 8.1 SDK with Xcode Version 6.1.1 (6A2008a) on OS X 10.10.1 (14B25).
Attachments
Backtrace (7.14 KB, text/plain)
2015-01-14 15:16 PST, Daniel Bates
no flags
Patch (4.31 KB, patch)
2015-01-16 16:00 PST, Daniel Bates
no flags
Pratik Solanki
Comment 1 2015-01-14 15:28:27 PST
Does this get fixed if you comment out the following line? CFURLRequestSetShouldStartSynchronously(request, 1); in ResourceHandleCFURLConnectionDelegateWithOperationQueue.cpp
Daniel Bates
Comment 2 2015-01-16 16:00:09 PST
Daniel Bates
Comment 3 2015-01-16 16:06:29 PST
(In reply to comment #1) > Does this get fixed if you comment out the following line? > > CFURLRequestSetShouldStartSynchronously(request, 1); > > in ResourceHandleCFURLConnectionDelegateWithOperationQueue.cpp No, the issue reproduced even after commenting out the analogous line in ResourceHandleMac.mm: <http://trac.webkit.org/browser/trunk/Source/WebCore/platform/network/mac/ResourceHandleMac.mm?rev=176949#L222>.
Daniel Bates
Comment 4 2015-01-16 16:10:22 PST
Pratik and I looked at this issue together today (01/16). Pratik noticed that we were incorrectly scheduling the NSURLConnection callbacks in WebKit2 with the NetworkProcess. Looking at this case, we want to schedule such callbacks to an NSOperationsQueue queue when using WebKit2 with the NetworkProcess.
Daniel Bates
Comment 5 2015-01-16 16:12:46 PST
Comment on attachment 244815 [details] Patch Clearing flags on attachment: 244815 Committed r178612: <http://trac.webkit.org/changeset/178612>
Daniel Bates
Comment 6 2015-01-16 16:12:50 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.